--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -162,6 +162,7 @@ html {
   float: left;
   width: 25%;
   height: 100%;
+  overflow: hidden;
 }
 
 
@@ -179,13 +180,23 @@ html {
   border-bottom: 2px solid #2a1710;
 }
 
+
+.current-site__site-name,
+.article-nav__sites__site {
+  font-family: "MF YueHei (Noncommercial)";
+  font-size: 200%;
+  padding: 0 0 0 0.25em;
+}
+
 .current-site__site-name {
   background-color: #2a1710;
   color: #efd984;
+}
 
-  font-family: "MF YueHei (Noncommercial)";
-  font-size: 200%;
-  padding: 0 0.5em;
+.current-site__news-items__item {
+  font-size: 12px;
+  white-space: nowrap;
+  padding: 2px 0px 2px 4px;;
 }
 
 
