--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -199,5 +199,26 @@ html {
   padding: 2px 0px 2px 4px;;
 }
 
+.screen-footer {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  font-size: 12px;
+  line-height: 1.2;
+
+  padding: 3px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
+}
+
+.screen-footer > a {
+  display: inline-block;
+  border-bottom: 1px solid #2a1710;
+
+  /* 为了不影响高度计算 */
+  margin: 0 0 -1px 0;
+}
+
 
 /* vim:set ai et ts=2 sw=2 sts=2 fenc=utf-8: */
