--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -202,7 +202,7 @@ html {
 .current-site__news-items__item {
   font-size: 12px;
   white-space: nowrap;
-  padding: 2px 0px 2px 4px;;
+  padding: 2px 0px 2px 4px;
 }
 
 .screen-footer {
