--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -172,7 +172,7 @@ html {
 }
 
 .article-nav__current-site,
-.article-nav__sites {
+.article-nav__sites-container {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
       -ms-box-sizing: border-box;
@@ -187,20 +187,36 @@ html {
   border-bottom: 2px solid #2a1710;
 }
 
+.current-site__site-name-container,
+.current-site__news-items-container,
+.article-nav__sites-container {
+    overflow: hidden;
+    position: relative;
+}
+
+.current-site__site-name,
+.current-site__news-items,
+.article-nav__sites {
+  position: relative;
+
+  /* 设置动画效果的初始值, 否则第一次不会触发渐变效果 */
+  top: 0px;
+}
+
 .current-site__site-name,
 .article-nav__sites__site {
   font-family: "MF YueHei (Noncommercial)";
-  font-size: 200%;
-  padding: 0 0 0 0.25em;
+  font-size: 150%;
+  padding: 0.2em 0 0.2em 0.25em;
 }
 
-.current-site__site-name {
+.current-site__site-name-container {
   background-color: #2a1710;
   color: #efd984;
 }
 
 .current-site__news-items__item {
-  font-size: 12px;
+  font-size: 14px;
   white-space: nowrap;
   padding: 2px 0px 2px 4px;
 }
