--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -200,7 +200,8 @@ html {
   position: relative;
 
   /* 设置动画效果的初始值, 否则第一次不会触发渐变效果 */
-  top: 0px;
+  top: 0;
+  left: 0;
 }
 
 .current-site__site-name,
