--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -231,18 +231,20 @@ html {
   position: absolute;
   bottom: 5px;
   right: 5px;
+
+  font-family: "MF YaYuan (Noncommercial)";
   font-size: 12px;
   line-height: 1.2;
 
-  padding: 3px;
+  padding: 6px 4px 6px 10px;
   border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
+  background-color: rgba(239, 217, 132, 0.875);
+  box-shadow: 0px 0px 2px rgba(239, 217, 132, 0.875);
 }
 
 .screen-footer > a {
   display: inline-block;
-  border-bottom: 1px solid #2a1710;
+  border-bottom: 1px solid rgba(42, 23, 16, 0.875);
 
   /* 为了不影响高度计算 */
   margin: 0 0 -1px 0;
