--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -103,7 +103,7 @@ html {
    * 为了和上边的日期宽度相称, 需要 6px 的 letter-spacing, 宽度就会多出来 6px.
    * 需要补偿
    */
-  right: 9px;  /* 15 - 6 */
+  right: 12px;  /* 18 - 6, 视觉上和上方日期元素的右侧一致 */
   text-align: right;
   letter-spacing: 6px;
   top: 55px;
