将站点名称字体改为雅圆

--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -232,7 +232,7 @@ html {
 
 .current-site__site-name,
 .article-nav__sites__site {
-  font-family: "MF YueHei (Noncommercial)";
+  font-family: "MF YaYuan (Noncommercial)";
   font-size: 150%;
   padding: 0.2em 0 0.2em 0.25em;
 }
