--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -175,7 +175,7 @@ html {
   float: left;
   width: 150px;
   height: 150px;
-  margin: 0 0.5em 0 0;
+  margin: 45px 0.5em 0 0;
 }
 
 .current-article__content {
