--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -230,12 +230,17 @@ html {
        -o-box-sizing: border-box;
           box-sizing: border-box;
 
-  height: 50%;
   overflow: hidden;
 }
 
 .article-nav__current-site {
   border-bottom: 2px solid #2a1710;
+
+  height: 62%;
+}
+
+.article-nav__sites-container {
+  height: 38%;
 }
 
 .current-site__site-name-container,
