在当前站点名称右侧添加一个右三角箭头图标

--- a/css/ctwall.css
+++ b/css/ctwall.css
@@ -315,15 +315,28 @@ html {
 }
 
 .current-site__site-name,
-.article-nav__sites__site {
-  font-family: "MF YaYuan (Noncommercial)", "造字工房雅圆（非商用）常规体", sans-serif;
+.article-nav__sites__site,
+.current-site__site-name__arrow {
   font-size: 150%;
   padding: 0.2em 0 0.2em 0.25em;
+}
+
+.current-site__site-name,
+.article-nav__sites__site {
+  font-family: "MF YaYuan (Noncommercial)", "造字工房雅圆（非商用）常规体", sans-serif;
 }
 
 .current-site__site-name-container {
   background-color: #2a1710;
   color: #efd984;
+}
+
+.current-site__site-name__arrow {
+  position: absolute;
+  top: 0;
+  right: 10px;
+
+  line-height: inherit;
 }
 
 .current-site__news-items__item {
